<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dip"
    tools:context=".Asteroids"
    android:background="@drawable/degradado" >

    <TextView
        style="@style/TextoAsteroides"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/appName" 
        />

    <Button
        android:id="@+id/button1"
        style="@style/TextoAsteroides.Botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarJuego"
        android:text="@string/start"
        android:textColor="#000" />

    <Button
        android:id="@+id/button2"
        style="@style/TextoAsteroides.Botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarPreferencias"
        android:text="@string/config"
        android:textColor="#000" />

    <Button
        android:id="@+id/button3"
        style="@style/TextoAsteroides.Botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarAcercaDe"
        android:text="@string/about"
        android:textColor="#000" />

    <Button
        android:id="@+id/button5"
        style="@style/TextoAsteroides.Botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarPuntuaciones"
        android:text="@string/scores"
        android:textColor="#000" />
    
    <Button
        android:id="@+id/button4"
        style="@style/TextoAsteroides.Botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="exit"
        android:text="@string/exit"
        android:textColor="#000" />
    

</LinearLayout>